@@ -13,7 +13,7 @@ HOMEPAGE="http://dma.pixel-act.com/"
 SRC_URI="mirror://sourceforge/${PN}/${PN}-src-${PV}.jar"
 
 LICENSE="BSD-2"
-SLOT="0"
+SLOT="0.2"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
